add conveyor dependency to produce windows and linux releases + refine jlink options